# image-processing-wasm

./: LICENSE  README.md  findings.md
image-processing-webservice/: .gitignore  app.py  pyproject.toml
image-processing-webservice/app/: __init__.py  image_service.py  info_service.py  operator_service.py  operators.py
image-processing-webservice/app/runtimes/: extism.py  wasmer.py  wasmtime.py
image-processing-webservice/instance/operators/: malicious.wasm  malicious_extism.wasm  noop.wasm  sobel.wasm  sobel_extism.wasm
operators/: build.sh  malicious.wasm  noop.wasm  sobel.wasm  sobel_extism.wasm
operators/malicious/: build.sh  go.mod  main.go
operators/malicious_extism/: build.sh  go.mod  main.go
operators/noop/: build.sh  go.mod  main.go
operators/sobel/: build.sh  go.mod  main.go  sobel.go  sobel.wasm
operators/sobel_extism/: build.sh  main.go
webclient/: index.html
